--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="younameit">#837FC6</color>
     <color name="kindablue">#00d4ff</color>
     <color name="greenish">#4df24f</color>
+    <color name="darkerthanlightyellow">#e9d353</color>
 </resources>
